<project xmlns="http://maven.apache.org/POM/4.0.0"
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>

	<packaging>pom</packaging>

	<groupId>dev.tim9h</groupId>
	<artifactId>rcp.parent</artifactId>
	<version>1.1.0-SNAPSHOT</version>

	<properties>
		<java.version>26</java.version>
		<maven.compiler.target>${java.version}</maven.compiler.target>
		<maven.compiler.source>${java.version}</maven.compiler.source>

		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>

		<log4j.version>2.25.5</log4j.version>
		<apache.commons.version>3.20.0</apache.commons.version>
		<apache.commons-io.version>2.21.0</apache.commons-io.version>
		<apache.commons-cli.version>1.11.0</apache.commons-cli.version>
		<jkeymaster.version>1.3</jkeymaster.version>
		<javafx.version>28-ea+6</javafx.version>
		<guava.version>33.7.1-jre</guava.version>
		<guice.version>7.0.0</guice.version>
	</properties>

	<modules>
		<module>rcp.api</module>
		<module>rcp.core</module>
		<module>rcp.controls</module>
		<module>rcp.cli</module>
	</modules>

	<repositories>
		<repository>
			<id>gh-read-packages</id>
			<name>GitHub Packages</name>
			<url>https://maven.pkg.github.com/tim9h/collections</url>
			<snapshots>
				<enabled>true</enabled>
			</snapshots>
		</repository>
	</repositories>

	<dependencyManagement>

		<dependencies>

			<dependency>
				<groupId>dev.tim9h</groupId>
				<artifactId>rcp.api</artifactId>
				<version>${project.version}</version>
			</dependency>

			<dependency>
				<groupId>dev.tim9h</groupId>
				<artifactId>rcp.controls</artifactId>
				<version>${project.version}</version>
			</dependency>

			<dependency>
				<groupId>org.apache.logging.log4j</groupId>
				<artifactId>log4j-api</artifactId>
				<version>${log4j.version}</version>
			</dependency>

			<dependency>
				<groupId>org.apache.logging.log4j</groupId>
				<artifactId>log4j-core</artifactId>
				<version>${log4j.version}</version>
			</dependency>

			<dependency>
				<groupId>org.apache.logging.log4j</groupId>
				<artifactId>log4j-slf4j2-impl</artifactId>
				<version>${log4j.version}</version>
			</dependency>

			<dependency>
				<groupId>org.apache.logging.log4j</groupId>
				<artifactId>log4j-jul</artifactId>
				<version>${log4j.version}</version>
			</dependency>

			<dependency>
				<groupId>org.openjfx</groupId>
				<artifactId>javafx-controls</artifactId>
				<version>${javafx.version}</version>
			</dependency>

			<dependency>
				<groupId>org.openjfx</groupId>
				<artifactId>javafx-swing</artifactId>
				<version>${javafx.version}</version>
			</dependency>

			<dependency>
				<groupId>org.openjfx</groupId>
				<artifactId>javafx-media</artifactId>
				<version>${javafx.version}</version>
			</dependency>

			<dependency>
				<groupId>com.google.guava</groupId>
				<artifactId>guava</artifactId>
				<version>${guava.version}</version>
			</dependency>

			<dependency>
				<groupId>com.google.inject</groupId>
				<artifactId>guice</artifactId>
				<version>${guice.version}</version>
			</dependency>

			<dependency>
				<groupId>org.apache.commons</groupId>
				<artifactId>commons-lang3</artifactId>
				<version>${apache.commons.version}</version>
			</dependency>

			<dependency>
				<groupId>commons-io</groupId>
				<artifactId>commons-io</artifactId>
				<version>${apache.commons-io.version}</version>
			</dependency>

			<dependency>
				<groupId>commons-cli</groupId>
				<artifactId>commons-cli</artifactId>
				<version>${apache.commons-cli.version}</version>
			</dependency>

			<dependency>
				<groupId>dev.tim9h</groupId>
				<artifactId>collections</artifactId>
				<version>1.1.0</version>
			</dependency>

		</dependencies>

	</dependencyManagement>

	<build>
		<pluginManagement>
			<plugins>

				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-compiler-plugin</artifactId>
					<version>3.16.0</version>
				</plugin>

				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-shade-plugin</artifactId>
					<version>3.6.2</version>
				</plugin>

				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-jar-plugin</artifactId>
					<version>3.5.1</version>
				</plugin>

				<plugin>
					<groupId>io.github.cleydyr</groupId>
					<artifactId>dart-sass-maven-plugin</artifactId>
					<version>1.5.0</version>
				</plugin>

				<plugin>
					<groupId>org.openjfx</groupId>
					<artifactId>javafx-maven-plugin</artifactId>
					<version>0.0.8</version>
				</plugin>

			</plugins>
		</pluginManagement>
	</build>

	<distributionManagement>
		<repository>
			<id>github</id>
			<name>GitHub Packages</name>
			<url>https://maven.pkg.github.com/tim9h/rcp</url>
		</repository>
		<snapshotRepository>
			<id>github</id>
			<name>GitHub Packages Snapshots</name>
			<url>https://maven.pkg.github.com/tim9h/rcp</url>
		</snapshotRepository>
	</distributionManagement>

</project>